--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.45",
+    "vue-i18n": "9.3.0-beta.17",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
