--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/lodash": "^4.14.191",
+    "@types/node": "^18.15.11",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
